DST v1.0.0 (Release date: 2018-xx-xx)
=================
Changes:
- added a NEWS file
- documentation generated by Roxygen
- addTobca: New function used to augment a bca definition with focal elements of zero mass.
- bca: New version; handles a new class named "bcaspec". Parameters added to work with definitions on product spaces (relations).
- bcaRel: New function to define a belief function on a product space.
- belplau: Calculation of measures of belief, plausibility and ratio of plausibility.
- decode: utility function
- shape: utility function
- dotprod: utility function
- double: utility function
- dsrwon: Combination of two belief functions
- elim: Reduction of a relation. This is a new function. Starting from a belief fn on a product space, we choose a variable to remove and calculate the reduced belief function.
- encode: New function. Utility function used to convert data in another number system.
- initsing: Initialization of a frame of discernment
- inters: Intersection of two tables of propositions
- nameRows: New function: Naming the rows of a matrix of focal elements. 
- nzdsr: Normalization of results from Dempster's rule of combination
- plautrans: example modified in documentation of function
- productSpace: New function. Representation of belief functions in their product space

*******
DST v0.3: Initial release of package on CRAN (2015-01-13)
================